--- a/src/app/tree-making/tree-making.component.html
+++ b/src/app/tree-making/tree-making.component.html
@@ -6,32 +6,40 @@
 
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
     <!-- This is the tree node template for leaf nodes -->
-    <!-- There is inline padding applied to this node using styles.
-      This padding value depends on the mat-icon-button width. -->
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-        Id: {{node.id}} <br>
-        Prawd.: {{node.prop.propability}}
-        <button mat-icon-button (click)="addNewItem(node)"><mat-icon>add</mat-icon></button>
+      <li class="mat-tree-node">
+        <!-- use a disabled button to provide padding for tree leaf -->
+        <button mat-icon-button disabled></button>
+        {{node.id}}
+      </li>
     </mat-tree-node>
+  
     <!-- This is the tree node template for expandable nodes -->
     <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+      <li>
+    
         <div class="mat-tree-node">
           <button mat-icon-button matTreeNodeToggle
-                  [attr.aria-label]="'Toggle ' + node.id">
+                  [attr.aria-label]="'toggle ' + node.id">
             <mat-icon class="mat-icon-rtl-mirror">
               {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
             </mat-icon>
           </button>
-          Id: {{node.id}} <br>
-          Prawd.: {{node.prop.propability}}
-          <button mat-icon-button (click)="addNewItem(node)"><mat-icon>add</mat-icon></button>
+          
+          <span class="example-tree-node-name">{{node.id}}</span>
+  
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="addGin(node)">Add gin</button>
+            <button mat-menu-item (click)="remove(node)">Remove</button>
+          </mat-menu>
         </div>
-        
-        <!-- There is inline padding applied to this div using styles.
-            This padding value depends on the mat-icon-button width.  -->
-        <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
-            role="group">
+    
+        <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
           <ng-container matTreeNodeOutlet></ng-container>
-      </div>
+        </ul>
+      </li>
     </mat-nested-tree-node>
   </mat-tree>
