--- a/src/app/tree-making/tree-making.component.html
+++ b/src/app/tree-making/tree-making.component.html
@@ -10,8 +10,20 @@
       <li class="mat-tree-node">
         <!-- use a disabled button to provide padding for tree leaf -->
         <button mat-icon-button disabled></button>
+        
         {{node.id}}
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="openAddGateDialog(node)">Add gate dialog</button>
+          <button mat-menu-item (click)="openAddEventDialog(node)">Add event dialog</button>
+          <button mat-menu-item *ngIf='(node.type == "event") && (node.children.length === 0)' (click)="addGate(node)">Add Gate</button>
+          <button mat-menu-item *ngIf='node.type == "gate"' (click)="addEvent(node)">Add Event</button>
+          <button mat-menu-item (click)="remove(node)">Remove</button>
+        </mat-menu>
       </li>
+      
     </mat-tree-node>
   
     <!-- This is the tree node template for expandable nodes -->
@@ -32,7 +44,10 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="addGin(node)">Add gin</button>
+            <button mat-menu-item (click)="openAddGateDialog(node)">Add gate dialog</button>
+            <button mat-menu-item (click)="openAddEventDialog(node)">Add event dialog</button>
+            <button mat-menu-item *ngIf='(node.type == "event") && (node.children.length === 0)' (click)="addGate(node)">Add Gate</button>
+            <button mat-menu-item *ngIf='node.type == "gate"' (click)="addEvent(node)">Add Event</button>
             <button mat-menu-item (click)="remove(node)">Remove</button>
           </mat-menu>
         </div>
