--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,10 +1,10 @@
-<h1>Witaj na naszej stronie!</h1>
-<p>
-    Strona została przygotowana na potrzeby zaliczenia przedmiotu Diagnostyka i wiarygodnoć SK.
-</p>
-<p>
-    Wykonali: 
-    sierż. pchor. inż. Igor Frelikowski
-    sierż. pchor. inż. Mateusz Wojciechowski
-    sierż. pchor. inż. Michał Malek
-</p>
+<mat-card class='card-section'>
+    <mat-card-title>Diagnostyka i wiarygodność SK</mat-card-title>
+    <mat-card-content>Projekt narzędzia komputerowego wspomagającego analizę drzew błędów (FTA)</mat-card-content>
+    <mat-card-content>Aplikacja umożliwiająca tworzenie pliku JSON drzewa FTA.</mat-card-content>
+    <mat-card-content> Wykonali:</mat-card-content>
+    <mat-card-content>sierż. pchor. inż. Igor Frelikowski</mat-card-content>
+    <mat-card-content>sierż. pchor. inż. Mateusz Wojciechowski</mat-card-content>
+    <mat-card-content>st. kpr. pchor. inż. Michał Malek</mat-card-content>
+    <mat-card-content></mat-card-content>
+</mat-card>
